include/visky/vklite2.h

/*************************************************************************************************/
/*  Type definitions */
/*************************************************************************************************/

typedef struct VklObject VklObject;
typedef struct VklApp VklApp;
typedef struct VklClock VklClock;
typedef struct VklQueues VklQueues;
typedef struct VklGpu VklGpu;
typedef struct VklWindow VklWindow;
typedef struct VklGraphics VklGraphics;
// Forward declarations.
typedef struct VklCanvas VklCanvas;
typedef struct VklContext VklContext;
/*************************************************************************************************/
/*  Enums                                                                                        */
/*************************************************************************************************/


typedef enum
{
    VKL_OBJECT_TYPE_UNDEFINED,
    VKL_OBJECT_TYPE_APP,
    VKL_OBJECT_TYPE_GPU,
    VKL_OBJECT_TYPE_WINDOW,
    VKL_OBJECT_TYPE_SWAPCHAIN,
    VKL_OBJECT_TYPE_CANVAS,
    VKL_OBJECT_TYPE_COMMANDS,
    VKL_OBJECT_TYPE_BUFFER,
    VKL_OBJECT_TYPE_TEXTURE,
    VKL_OBJECT_TYPE_IMAGES,
    VKL_OBJECT_TYPE_SAMPLER,
    VKL_OBJECT_TYPE_BINDINGS,
    VKL_OBJECT_TYPE_COMPUTE,
    VKL_OBJECT_TYPE_GRAPHICS,
    VKL_OBJECT_TYPE_BARRIER,
    VKL_OBJECT_TYPE_FENCES,
    VKL_OBJECT_TYPE_SEMAPHORES,
    VKL_OBJECT_TYPE_RENDERPASS,
    VKL_OBJECT_TYPE_FRAMEBUFFER,
    VKL_OBJECT_TYPE_SUBMIT,
    VKL_OBJECT_TYPE_CUSTOM,
} VklObjectType;
// NOTE: the order is important, status >= CREATED means the object has been created
typedef enum
{
    VKL_OBJECT_STATUS_NONE,          // after allocation
    VKL_OBJECT_STATUS_DESTROYED,     // after destruction
    VKL_OBJECT_STATUS_INIT,          // after struct initialization but before Vulkan creation
    VKL_OBJECT_STATUS_CREATED,       // after proper creation on the GPU
    VKL_OBJECT_STATUS_NEED_RECREATE, // need to be recreated
    VKL_OBJECT_STATUS_NEED_UPDATE,   // need to be updated
    VKL_OBJECT_STATUS_NEED_DESTROY,  // need to be destroyed
    VKL_OBJECT_STATUS_INACTIVE,      // inactive
    VKL_OBJECT_STATUS_INVALID,       // invalid
} VklObjectStatus;
typedef enum
{
    VKL_BACKEND_NONE,
    VKL_BACKEND_GLFW,
    VKL_BACKEND_OFFSCREEN,
} VklBackend;
typedef enum
{
    VKL_QUEUE_TRANSFER = 0x01,
    VKL_QUEUE_GRAPHICS = 0x02,
    VKL_QUEUE_COMPUTE = 0x04,
    VKL_QUEUE_PRESENT = 0x08,
    VKL_QUEUE_RENDER = 0x07,
    VKL_QUEUE_ALL = 0x0F,
} VklQueueType;
typedef enum
{
    VKL_COMMAND_TRANSFERS,
    VKL_COMMAND_GRAPHICS,
    VKL_COMMAND_COMPUTE,
    VKL_COMMAND_GUI,
} VklCommandBufferType;
typedef enum
{
    VKL_TEXTURE_AXIS_U,
    VKL_TEXTURE_AXIS_V,
    VKL_TEXTURE_AXIS_W,
} VklTextureAxis;
typedef enum
{
    VKL_BLEND_DISABLE,
    VKL_BLEND_ENABLE,
} VklBlendType;
typedef enum
{
    VKL_DEPTH_TEST_DISABLE,
    VKL_DEPTH_TEST_ENABLE,
} VklDepthTest;
typedef enum
{
    VKL_RENDERPASS_ATTACHMENT_COLOR,
    VKL_RENDERPASS_ATTACHMENT_DEPTH,
} VklRenderpassAttachmentType;
/*************************************************************************************************/
/*  Common                                                                                       */
/*************************************************************************************************/

struct VklObject
{
    VklObjectType type;
    VklObjectStatus status;
};
/*************************************************************************************************/
/*  Clock                                                                                        */
/*************************************************************************************************/

struct VklClock
{
    double elapsed;  // time in seconds elapsed since calling _start_time(clock)
    double interval; // interval since the last clock update

    struct timeval start, current;
    double checkpoint_time;
    uint64_t checkpoint_value;
};
/*************************************************************************************************/
/*  Structs                                                                                      */
/*************************************************************************************************/

struct VklApp
{
    VklObject obj;
    uint32_t n_errors;

    // Backend
    VklBackend backend;

    // Global clock
    VklClock clock;

    // Vulkan objects.
    VkInstance instance;
    VkDebugUtilsMessengerEXT debug_messenger;

    // GPUs.
    uint32_t max_gpus;
    uint32_t gpu_count;
    VklGpu* gpus;

    // Windows.
    uint32_t max_windows;
    VklWindow* windows;

    // Canvas.
    uint32_t max_canvases;
    VklCanvas* canvases;
};
struct VklQueues
{
    VklObject obj;

    // Hardware supported queues
    // -------------------------
    // Number of different queue families supported by the hardware
    uint32_t queue_family_count;
    // Properties of the queue families
    // VkQueueFamilyProperties queue_families[VKL_MAX_QUEUE_FAMILIES];
    bool support_transfer[VKL_MAX_QUEUE_FAMILIES];
    bool support_graphics[VKL_MAX_QUEUE_FAMILIES];
    bool support_compute[VKL_MAX_QUEUE_FAMILIES];
    bool support_present[VKL_MAX_QUEUE_FAMILIES];
    uint32_t max_queue_count[VKL_MAX_QUEUE_FAMILIES]; // for each queue family, the max # of queues

    // Requested queues
    // ----------------
    // Number of requested queues
    uint32_t queue_count;
    // Requested queue types.
    VklQueueType queue_types[VKL_MAX_QUEUES]; // the VKL type of each queue
    // Queues and associated command pools
    uint32_t queue_families[VKL_MAX_QUEUES]; // for each family, the # of queues
    uint32_t queue_indices[VKL_MAX_QUEUES];  // for each requested queue, its # within its family
    VkQueue queues[VKL_MAX_QUEUES];
    VkCommandPool cmd_pools[VKL_MAX_QUEUES];
};
struct VklGpu
{
    VklObject obj;
    VklApp* app;

    uint32_t idx; // GPU index within the app
    const char* name;

    VkPhysicalDevice physical_device;
    VkPhysicalDeviceProperties device_properties;
    VkPhysicalDeviceFeatures device_features;
    VkPhysicalDeviceMemoryProperties memory_properties;

    uint32_t present_mode_count;
    VkPresentModeKHR present_modes[VKL_MAX_PRESENT_MODES];

    VklQueues queues;
    VkDescriptorPool dset_pool;

    VkPhysicalDeviceFeatures requested_features;
    VkDevice device;

    VklContext* context;

    uint32_t max_graphics;
    VklGraphics* graphics;
};
struct VklWindow
{
    VklObject obj;
    VklApp* app;

    void* backend_window;
    uint32_t width, height; // in screen coordinates

    bool close_on_esc;
    VkSurfaceKHR surface;
    VkSurfaceCapabilitiesKHR caps; // current extent in pixel coordinates (framebuffers)
};
struct VklGraphics
{
    VklObject obj;
    VklGpu* gpu;

    VklRenderpass* renderpass;
    uint32_t subpass;

    VkPrimitiveTopology topology;
    VklBlendType blend_type;
    VklDepthTest depth_test;
    VkPolygonMode polygon_mode;
    VkCullModeFlags cull_mode;
    VkFrontFace front_face;

    VkPipeline pipeline;
    VklSlots* slots;

    uint32_t vertex_binding_count;
    VklVertexBinding vertex_bindings[VKL_MAX_VERTEX_BINDINGS];

    uint32_t vertex_attr_count;
    VklVertexAttr vertex_attrs[VKL_MAX_VERTEX_ATTRS];

    uint32_t shader_count;
    VkShaderStageFlagBits shader_stages[VKL_MAX_SHADERS_PER_GRAPHICS];
    VkShaderModule shader_modules[VKL_MAX_SHADERS_PER_GRAPHICS];
};
/*************************************************************************************************/
/*  App                                                                                          */
/*************************************************************************************************/

/**
 * Create an application instance.
 *
 * There is typically only one App object in a given application. This object holds a pointer to
 * the Vulkan instance and is responsible for discovering the available GPUs.
 *
 * @param backend the backend, typically either VKL_BACKEND_GLFW or VKL_BACKEND_OFFSCREEN
 * @returns a pointer to the created VklApp struct
 */
VKY_EXPORT VklApp* vkl_app(VklBackend backend);
/**
 * Destroy the application.
 *
 * This function automatically destroys all objects created within the application.
 *
 * @param app the application to destroy
 */
VKY_EXPORT int vkl_app_destroy(VklApp* app);
/*************************************************************************************************/
/*  GPU                                                                                          */
/*************************************************************************************************/

VKY_EXPORT VklGpu* vkl_gpu(VklApp* app, uint32_t idx);