include/visky/canvas.h

/*************************************************************************************************/
/*  Enums                                                                                        */
/*************************************************************************************************/

/**
 * Private event types.
 *
 * Private events are emitted and consumed in the main thread, typically by the canvas itself.
 * They are rarely used by end-users.
 *
 */
typedef enum
{
    VKL_PRIVATE_EVENT_INIT,      // called before the first frame
    VKL_PRIVATE_EVENT_REFILL,    // called every time the command buffers need to be recreated
    VKL_PRIVATE_EVENT_INTERACT,  // called at every frame, before event enqueue
    VKL_PRIVATE_EVENT_FRAME,     // called at every frame, after event enqueue
    VKL_PRIVATE_EVENT_TIMER,     // called every X ms in the main thread, just after FRAME
    VKL_PRIVATE_EVENT_RESIZE,    // called at every resize
    VKL_PRIVATE_EVENT_PRE_SEND,  // called before sending the commands buffers
    VKL_PRIVATE_EVENT_POST_SEND, // called after sending the commands buffers
    VKL_PRIVATE_EVENT_DESTROY,   // called before destruction
} VklPrivateEventType;
typedef enum
{
    VKL_CANVAS_SIZE_SCREEN,
    VKL_CANVAS_SIZE_FRAMEBUFFER,
} VklCanvasSizeType;
/*************************************************************************************************/
/*  Event system                                                                                 */
/*************************************************************************************************/

/**
 * Public event types.
 *
 * Public events (also just called "events") are emitted in the main thread and consumed in the
 * background thread by user callbacks.
 */
typedef enum
{
    VKL_EVENT_NONE,
    VKL_EVENT_INIT,
    VKL_EVENT_MOUSE_BUTTON,
    VKL_EVENT_MOUSE_MOVE,
    VKL_EVENT_MOUSE_WHEEL,
    VKL_EVENT_KEY,
    VKL_EVENT_FRAME,
    // VKL_EVENT_TIMER,   // TODO later
    // VKL_EVENT_ONESHOT, // TODO later
    VKL_EVENT_SCREENCAST,
} VklEventType;
typedef enum
{
    VKL_KEY_RELEASE,
    VKL_KEY_PRESS,
} VklKeyType;
typedef enum
{
    VKL_MOUSE_RELEASE,
    VKL_MOUSE_PRESS,
} VklMouseButtonType;
// NOTE: must match GLFW values!
typedef enum
{
    VKL_KEY_MODIFIER_NONE = 0x00000000,
    VKL_KEY_MODIFIER_SHIFT = 0x00000001,
    VKL_KEY_MODIFIER_CONTROL = 0x00000002,
    VKL_KEY_MODIFIER_ALT = 0x00000004,
    VKL_KEY_MODIFIER_SUPER = 0x00000008,
} VklKeyModifiers;
typedef enum
{
    VKL_MOUSE_BUTTON_NONE,
    VKL_MOUSE_BUTTON_LEFT,
    VKL_MOUSE_BUTTON_MIDDLE,
    VKL_MOUSE_BUTTON_RIGHT,
} VklMouseButton;
typedef enum
{
    VKL_MOUSE_STATE_INACTIVE,
    VKL_MOUSE_STATE_DRAG,
    VKL_MOUSE_STATE_WHEEL,
    VKL_MOUSE_STATE_CLICK,
    VKL_MOUSE_STATE_DOUBLE_CLICK,
    VKL_MOUSE_STATE_CAPTURE,
} VklMouseStateType;
typedef enum
{
    VKL_KEYBOARD_STATE_INACTIVE,
    VKL_KEYBOARD_STATE_ACTIVE,
    VKL_KEYBOARD_STATE_CAPTURE,
} VklKeyStateType;
typedef struct VklEvent VklEvent;
typedef struct VklCanvasCallbackRegister VklCanvasCallbackRegister;
typedef struct VklEventCallbackRegister VklEventCallbackRegister;
struct VklEvent
{
    VklEventType type;
    void* user_data;
    union
    {
        VklMouseButtonEvent b; // for MOUSE_BUTTON public events
        VklMouseMoveEvent m;   // for MOUSE_MOVE public events
        VklMouseWheelEvent w;  // for WHEEL public events
        VklKeyEvent k;         // for KEY public events
        VklFrameEvent f;       // for FRAME public event
        // VklTimerEvent t;       // for TIMER, ONESHOT public events
        VklScreencastEvent s; // for SCREENCAST public events
    } u;
};
struct VklCanvasCallbackRegister
{
    VklPrivateEventType type;
    uint64_t idx; // used by TIMER events: increases every time the TIMER event is raised
    double param;
    void* user_data;
    VklCanvasCallback callback;
};
struct VklEventCallbackRegister
{
    VklEventType type;
    // uint64_t idx; // used by TIMER events: increases every time the TIMER event is raised
    double param;
    void* user_data;
    VklEventCallback callback;
};
/*************************************************************************************************/
/*  Canvas struct                                                                                */
/*************************************************************************************************/

struct VklCanvas
{
    VklObject obj;
    VklApp* app;
    VklGpu* gpu;

    void* user_data;

    // This thread-safe variable is used by the background thread to
    // safely communicate a status change of the canvas
    _Atomic VklObjectStatus cur_status;
    _Atomic VklObjectStatus next_status;

    VklWindow* window;

    // Swapchain
    VklSwapchain swapchain;
    VklImages depth_image;
    VklFramebuffers framebuffers;
    VklSubmit submit;

    uint32_t cur_frame; // current frame within the images in flight
    uint64_t frame_idx;
    VklClock clock;

    uint32_t max_commands;
    VklCommands* commands;
    // when refilling command buffers, keep track of which img_idx were updated until we stop
    // calling the REFILL callbackks
    bool img_updated[VKL_MAX_SWAPCHAIN_IMAGES];

    // Synchronization events.
    uint32_t max_renderpasses;
    VklRenderpass* renderpasses;

    uint32_t max_semaphores;
    VklSemaphores* semaphores;

    uint32_t max_fences;
    VklFences* fences;

    uint32_t max_graphics;
    VklGraphics* graphics;

    // FAST transfers
    VklFifo fifo_fast; // fast transfers queue
    VklTransfer transfers_fast[VKL_MAX_TRANSFERS];
    VklTransfer* cur_transfer_fast;
    bool cur_transfer_updated[VKL_MAX_SWAPCHAIN_IMAGES];

    uint32_t canvas_callbacks_count;
    VklCanvasCallbackRegister canvas_callbacks[VKL_MAX_EVENT_CALLBACKS];

    uint32_t event_callbacks_count;
    VklEventCallbackRegister event_callbacks[VKL_MAX_EVENT_CALLBACKS];

    // Event queue.
    VklFifo event_queue;
    VklEvent events[VKL_MAX_FIFO_CAPACITY];
    VklThread event_thread;
    _Atomic VklEventType event_processing;
};
/*************************************************************************************************/
/*  Canvas                                                                                       */
/*************************************************************************************************/

// adds callbacks as a function of the backend
// GLFW ex: init_canvas_glfw(VklCanvas* canvas);
// start a background thread that:
// - dequeue event queue (wait)
// - switch the event type
// - call the relevant event callbacks
VKY_EXPORT VklCanvas* vkl_canvas(VklGpu* gpu, uint32_t width, uint32_t height);
VKY_EXPORT void vkl_canvas_to_close(VklCanvas* canvas, bool value);
VKY_EXPORT void vkl_app_run(VklApp* app, uint64_t frame_count);