include/visky/context.h

/*************************************************************************************************/
/*  Enums                                                                                        */
/*************************************************************************************************/

// Default buffer.
typedef enum
{
    VKL_DEFAULT_BUFFER_STAGING,
    VKL_DEFAULT_BUFFER_VERTEX,
    VKL_DEFAULT_BUFFER_INDEX,
    VKL_DEFAULT_BUFFER_UNIFORM,
    VKL_DEFAULT_BUFFER_STORAGE,
    VKL_DEFAULT_BUFFER_UNIFORM_MAPPABLE,
    VKL_DEFAULT_BUFFER_COUNT,
} VklDefaultBuffer;
// Default queue.
typedef enum
{
    VKL_DEFAULT_QUEUE_TRANSFER,
    VKL_DEFAULT_QUEUE_COMPUTE,
    VKL_DEFAULT_QUEUE_RENDER,
    VKL_DEFAULT_QUEUE_PRESENT,
    VKL_DEFAULT_QUEUE_COUNT,
} VklDefaultQueue;
// Filter type.
typedef enum
{
    VKL_FILTER_MIN,
    VKL_FILTER_MAX,
} VklFilterType;
// Transfer mode.
typedef enum
{
    VKL_TRANSFER_MODE_SYNC,
    VKL_TRANSFER_MODE_ASYNC,
} VklTransferMode;
// Transfer type.
typedef enum
{
    VKL_TRANSFER_NONE,
    VKL_TRANSFER_BUFFER_UPLOAD,
    VKL_TRANSFER_BUFFER_UPLOAD_FAST,
    VKL_TRANSFER_BUFFER_DOWNLOAD,
    VKL_TRANSFER_BUFFER_COPY,
    VKL_TRANSFER_TEXTURE_UPLOAD,
    VKL_TRANSFER_TEXTURE_DOWNLOAD,
    VKL_TRANSFER_TEXTURE_COPY,
} VklDataTransferType;